--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,15 +18,14 @@ dependencies:
   flutter_svg: ^2.0.7
   url_launcher: ^6.1.11
   cached_network_image: ^3.2.3
-  image_downloader:
-    git:
-      url: https://github.com/ko2ic/image_downloader
+  gallery_saver: ^2.3.2
   json_annotation: ^4.8.1
   sqflite: ^2.2.8+4
   path_provider: ^2.0.15
   path: ^1.8.3
   carousel_slider: ^4.2.1
   shimmer: ^3.0.0
+  flutter_staggered_grid_view: ^0.6.2
 
 dev_dependencies:
   flutter_test:
